@@ -3,6 +3,8 @@ package group_3.tier_api.backend.config;
 import group_3.tier_api.backend.security.AuthTokenFilter;
 import group_3.tier_api.backend.security.OAuth2AuthenticationSuccessHandler;
 import group_3.tier_api.backend.security.UserDetailsServiceImpl;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -36,11 +38,14 @@ import java.util.Arrays;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    @Value("${spring.security.oauth2.client.registration.google.client-id}")
-    private String googleClientId;
+    private static final Logger logger = LoggerFactory.getLogger(SecurityConfig.class);
 
-    @Value("${spring.security.oauth2.client.registration.google.client-secret}")
-    private String googleClientSecret;
+    // Hardcoded values as defaults with environment variables as overrides
+    private static final String DEFAULT_GOOGLE_CLIENT_ID = "90481875753-p89h3cguug4634l6qj5jbe5ei11omguo.apps.googleusercontent.com";
+    private static final String DEFAULT_GOOGLE_CLIENT_SECRET = "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";
+
+    @Value("${cors.allowed-origins:http://localhost:19006,https://frontend-production-c2bc.up.railway.app}")
+    private String[] allowedOrigins;
 
     @Autowired
     private UserDetailsServiceImpl userDetailsService;
@@ -73,6 +78,27 @@ public class SecurityConfig {
 
     @Bean
     public ClientRegistrationRepository clientRegistrationRepository() {
+        logger.info("Configuring Google OAuth2 Client Registration");
+
+        // Get client ID and secret from environment variables first, fall back to
+        // defaults
+        String googleClientId = System.getenv("GOOGLE_CLIENT_ID");
+        if (googleClientId == null || googleClientId.isEmpty()) {
+            googleClientId = DEFAULT_GOOGLE_CLIENT_ID;
+            logger.info("Using default Google Client ID");
+        } else {
+            logger.info("Using Google Client ID from environment variable");
+        }
+
+        String googleClientSecret = System.getenv("GOOGLE_CLIENT_SECRET");
+        if (googleClientSecret == null || googleClientSecret.isEmpty()) {
+            googleClientSecret = DEFAULT_GOOGLE_CLIENT_SECRET;
+            logger.info("Using default Google Client Secret");
+        } else {
+            logger.info("Using Google Client Secret from environment variable");
+        }
+
+        // Create Google registration
         ClientRegistration googleRegistration = ClientRegistration.withRegistrationId("google")
                 .clientId(googleClientId)
                 .clientSecret(googleClientSecret)
@@ -95,28 +121,42 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Get allowed origins from environment variable or use defaults
-        String allowedOriginsStr = System.getenv("ALLOWED_ORIGINS");
-        List<String> allowedOrigins;
+        // Get allowed origins from application configuration
+        List<String> corsAllowedOrigins;
 
-        if (allowedOriginsStr != null && !allowedOriginsStr.isEmpty()) {
-            // Split comma-separated list of allowed origins
-            allowedOrigins = Arrays.asList(allowedOriginsStr.split(","));
-        } else {
-            // Default allowed origins for local development
-            allowedOrigins = List.of(
-                    "http://localhost:8083",
-                    "http://localhost:19006",
-                    "http://localhost:19000",
-                    "https://app.yourdomain.com" // Railway frontend domain
-            );
+        try {
+            // First check environment variable (highest priority)
+            String envAllowedOrigins = System.getenv("ALLOWED_ORIGINS");
+            if (envAllowedOrigins != null && !envAllowedOrigins.isEmpty()) {
+                corsAllowedOrigins = Arrays.asList(envAllowedOrigins.split(","));
+                logger.info("Using CORS allowed origins from environment: {}", corsAllowedOrigins);
+            } else {
+                // Use the value from application.yml
+                corsAllowedOrigins = Arrays.asList(allowedOrigins);
+                logger.info("Using CORS allowed origins from configuration: {}", corsAllowedOrigins);
+            }
+
+            // Validate origins
+            for (String origin : corsAllowedOrigins) {
+                if (!origin.startsWith("http://") && !origin.startsWith("https://")) {
+                    logger.warn("Invalid origin format detected: {}. Origins should start with http:// or https://",
+                            origin);
+                }
+            }
+
+        } catch (Exception e) {
+            // Fallback to safe defaults if something goes wrong
+            logger.error("Error configuring CORS allowed origins, using safe defaults", e);
+            corsAllowedOrigins = List.of("http://localhost:19006", "http://localhost:3000",
+                    "https://frontend-production-c2bc.up.railway.app");
         }
 
-        configuration.setAllowedOrigins(allowedOrigins);
+        configuration.setAllowedOrigins(corsAllowedOrigins);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "x-auth-token"));
         configuration.setExposedHeaders(List.of("x-auth-token"));
         configuration.setAllowCredentials(true); // Enable credentials for authentication
+        configuration.setMaxAge(3600L); // Cache preflight requests for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -125,6 +165,8 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        logger.info("Configuring SecurityFilterChain");
+
         http.csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -135,11 +177,17 @@ public class SecurityConfig {
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/hello").permitAll()
                         .requestMatchers("/", "/error", "/favicon.ico").permitAll()
+                        .requestMatchers("/health", "/service-info").permitAll() // Allow health check endpoints
                         .requestMatchers("/api/cache/**").permitAll() // For development
                         .anyRequest().authenticated())
                 .oauth2Login(oauth2 -> {
-                    oauth2.clientRegistrationRepository(clientRegistrationRepository());
-                    oauth2.successHandler(oAuth2AuthenticationSuccessHandler);
+                    try {
+                        oauth2.clientRegistrationRepository(clientRegistrationRepository());
+                        oauth2.successHandler(oAuth2AuthenticationSuccessHandler);
+                        logger.info("OAuth2 login configuration successful");
+                    } catch (Exception e) {
+                        logger.error("Failed to configure OAuth2 login", e);
+                    }
                 });
 
         http.authenticationProvider(authenticationProvider());
